# Worklytics

./: .gitignore
backend/: pyproject.toml
backend/authentication/: urls.py  views.py
backend/core/: settings.py  urls.py
backend/tickets/: filters.py  models.py  serializers.py  urls.py  views.py
backend/tickets/migrations/: 0001_initial.py  0002_remove_ticket_assessment.py  0003_alter_ticket_status.py  0004_alter_ticket_creation_time.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: authRequests.ts  common.ts  configureApi.ts  ticketsRequest.ts
frontend/src/components/checkbox/: main.tsx  styles.ts
frontend/src/components/header/: main.tsx  styles.ts
frontend/src/components/input-ticket/: main.tsx  styles.ts
frontend/src/components/navbar/: main.tsx  styles.ts
frontend/src/components/primary-button/: main.tsx  styles.ts
frontend/src/components/search-ticket/: styles.ts
frontend/src/components/secondary-button/: styles.ts
frontend/src/components/select-status/: main.tsx  styles.ts
frontend/src/components/table/: main.tsx  styles.ts
frontend/src/components/table-status/: main.tsx  styles.ts
frontend/src/containers/produtivity/: main.tsx  styles.ts
frontend/src/contexts/: authContext.tsx  ticketsContext.tsx
frontend/src/pages/auth/: authConstants.ts  callback.tsx  main.tsx
frontend/src/pages/gadget/: main.tsx  styles.ts
frontend/src/styles/: global-styles.ts  theme.ts
frontend/src/utils/: ProtectedRoutes.tsx  types.ts  utils.ts
(+46 files in other folders)
